--- a/details.html
+++ b/details.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="container-box2">
-      <div class="fondosala">     
+      <div class="fondosala  container-fluid">     
       <img src="Logo_Amazing_Events.png" class="rounded float-start" alt="Logo" width="250" height="100">
       <div class="container-fluid row bg-black align-self-center">
           <nav class="navbar navbar-expand-lg bg-body-black">
@@ -39,7 +39,7 @@
                   </ul>
                 </div>
               </div>
-            </nav>
+          </nav>
       </div>  
       </div>
   </div>
@@ -47,17 +47,7 @@
   <main class="flex-grow-1">
     <div class="card mb-3 mg-3 d-flex justify-content-between" style="max-width: 768px;">
       <div class="row g-0 d-flex justify-content-center" id='detailscomp'>
-        <!-- <div class="col-md-4">
-          <img src="bannerfiestadelcine.jpg" class="img-fluid rounded-start" alt="fiestadelcine">
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title">Cinema</h5>
-            <p class="card-text">Del domingo 12 al martes 14 inclusive se podrá disfrutar de una película en las salas participantes a solo $450.</p>
-            <p class="card-text">El precio promocional aplicará para entradas 2D y 3D, y la venta anticipada ya está disponible en los sitios web y boleterías de los cines que participan de este Festival. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Podés acceder desde el sitio fiestadelcine.com.ar</small></p>
-          </div>
-        </div> -->
+        
       </div>
     </div>
   </main>   
@@ -77,8 +67,8 @@
             </div>
         </div>
     </footer>
-    <script src="js/data_ae.js"></script>
-    <script src="js/home.js"></script>
+    <!-- <script src="js/data_ae.js"></script> -->
+    <!-- <script src="js/home.js"></script> -->
     <script src="js/details.js"></script>
 </body>
 
