--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
       <div class="container-box2">
-        <div class="fondosala">     
+        <div class="fondosala container-fluid">     
         <img src="Logo_Amazing_Events.png" class="rounded float-start p-3" alt="Logo" width="250" height="100">
         <div class="container-fluid row bg-black align-self-center">
             <nav class="navbar navbar-expand-lg bg-body-black">
@@ -92,11 +92,10 @@
             <h5 class="display-3 text-end text-black">Cohort</h5>
         </div>
     </footer>
-    <script src="js/data_ae.js"></script>
+    <!-- <script src="js/data_ae.js"></script> -->
     <script src="js/home.js"></script>
-    <script src="js/filters.js"></script>
     <script src="js/checks.js"></script>
-
+    <script src="js/filters.js"></script>
 </body>
 
 </html>
