--- a/upcoming.html
+++ b/upcoming.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="container-box2">
-      <div class="fondosala">     
+      <div class="fondosala container-fluid">     
       <img src="Logo_Amazing_Events.png" class="rounded float-start p-3" alt="Logo" width="250" height="100">
       <div class="container-fluid row bg-black align-self-center">
           <nav class="navbar navbar-expand-lg bg-body-black">
@@ -57,11 +57,10 @@
     <nav class="navbar bg-body-black">
         <div class="container text-black">
             <form action="/action_page.php" method="get" id="categupcom" class="d-flex justify-content-between">
-              <label class="contact-label" for="name"></label>
-              <input class="class_checks contact-input" type="checkbox" name="name" id="name"> 
+               
             </form>
           <form class="d-flex" role="search">
-            <input onkeyup='captureDataU()' id="nameU" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control me-2" type="search" id="nameupcom" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
         </div>
@@ -87,9 +86,9 @@
         </div>
     </div>
 </footer>
-<script src="js/data_ae.js"></script>
+<!-- <script src="js/home.js"></script> -->
 <script src="js/upcom.js"></script>
-<script src="js/filtersU.js"></script>
+<script src="js/filtersupcom.js"></script>
 <script src="js/checksU.js"></script>
 
 </body>
