--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="container-box2">
-      <div class="fondosala">     
+      <div class="fondosala container-fluid">     
       <img src="Logo_Amazing_Events.png" class="rounded float-start p-3" alt="Logo" width="250" height="100">
       <div class="container-fluid row bg-black align-self-center">
           <nav class="navbar navbar-expand-lg bg-body-black">
@@ -39,7 +39,7 @@
                   </ul>
                 </div>
               </div>
-            </nav>
+          </nav>
       </div>
       </div>
     </div>
