--- a/past.html
+++ b/past.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="container-box2">
-      <div class="fondosala">     
+      <div class="fondosala container-fluid">     
       <img src="Logo_Amazing_Events.png" class="rounded float-start" alt="Logo" width="250" height="100">
       <div class="container-fluid row bg-black align-self-center">
           <nav class="navbar navbar-expand-lg bg-body-black">
@@ -87,7 +87,7 @@
         </div>
     </div>
     </footer>
-    <script src="js/data_ae.js"></script>
+    <!-- <script src="js/data_ae.js"></script> -->
     <script src="js/past.js"></script>
     <script src="js/filterspast.js"></script>
     <script src="js/checkspast.js"></script>
